<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProfileActivity">

    <!-- Toolbar for the title -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="400"
                    android:contentDescription="@string/profile_photo_content_desc"/>

                <Button
                    android:id="@+id/changeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_button_text"
                    android:onClick="onChangePhotoClicked"/>
            </LinearLayout>


            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_title" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_title" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_title" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phoneNumber"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/genderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_title" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/maleGenRadio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/male_gender_text" />

                <RadioButton
                    android:id="@+id/femaleGenRadio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female_gender_text" />

                <RadioButton
                    android:id="@+id/otherGenRadio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/other_gender_text" />
            </RadioGroup>

            <TextView
                android:id="@+id/classYearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_year_title" />

            <EditText
                android:id="@+id/classYearEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="graduationYear"
                android:ems="10"
                android:hint="@string/class_year_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/majorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/major_title" />

            <EditText
                android:id="@+id/majorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="University Degree"
                android:ems="10"
                android:hint="@string/major_hint"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/save_button_text"
                    android:onClick="onSaveClicked"/>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/cancel_button_text"
                    android:onClick="onCancelClicked"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>