<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_container_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:background="#AAFFFFFF"
        android:padding="8dp"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_type" />

        <TextView
            android:id="@+id/avg_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_avg_speed" />

        <TextView
            android:id="@+id/cur_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_cur_speed" />

        <TextView
            android:id="@+id/calories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_calories" />

        <TextView
            android:id="@+id/climb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_climb" />

        <TextView
            android:id="@+id/distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_distance" />
    </LinearLayout>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/map_delete_button_text" />
</RelativeLayout>
