<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Google Maps Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_container_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Status section aligned to the top-right -->
    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:background="#AAFFFFFF"
        android:padding="8dp"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_type" />

        <TextView
            android:id="@+id/avg_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_avg_speed" />

        <TextView
            android:id="@+id/cur_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_cur_speed" />

        <TextView
            android:id="@+id/calories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_calories" />

        <TextView
            android:id="@+id/climb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_climb" />

        <TextView
            android:id="@+id/distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_status_distance" />
    </LinearLayout>

    <!-- Save and Cancel buttons at the bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>
